<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblProposedColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#6699cc"
                android:gravity="center"
                android:text="@string/Proposed_color" />

            <TextView
                android:id="@+id/lblTrgedColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#777"
                android:gravity="center"
                android:text="@string/Targert_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblRedTittle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|start"
                android:text="@string/Red" />

            <SeekBar
                android:id="@+id/sbrRed"
                android:layout_width="305dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255"
                android:progress="102"
                android:progressTint="#F44336"
                android:thumbTint="#F44336" />

            <TextView
                android:id="@+id/lblRedValue"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|end"
                android:text="102" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblGreenTittle"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|start"
                android:text="@string/Green" />

            <SeekBar
                android:id="@+id/sbrGreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255"
                android:progress="153"
                android:progressTint="#4CAF50"
                android:thumbTint="#4CAF50" />

            <TextView
                android:id="@+id/lblGreenValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|end"
                android:text="153" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblBlueTittle"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|start"
                android:text="@string/Blue" />

            <SeekBar
                android:id="@+id/sbrBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255"
                android:progress="204"
                android:progressTint="#3F51B5"
                android:thumbTint="#3F51B5" />

            <TextView
                android:id="@+id/lblBlueValue"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|end"
                android:text="204" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNewColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/New" />

            <Button
                android:id="@+id/btnGetScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Score" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>